# quad-sdk

./: .gitignore  README.md
global_body_planner/: CMakeLists.txt  global_body_planner.yaml
global_body_planner/include/global_body_planner/: global_body_planner_publisher.h  planning_utils.h
global_body_planner/src/: gbpl.cpp  global_body_plan.cpp  global_body_planner.cpp  global_body_planner_publisher.cpp  global_body_planner_publisher_node.cpp  planner_class.cpp  planning_utils.cpp  rrt.cpp
local_planner/: local_planner.yaml
local_planner/src/: local_footstep_planner.cpp  local_planner.cpp
nmpc_controller/: CMakeLists.txt
nmpc_controller/include/nmpc_controller/: quad_nlp.h
nmpc_controller/scripts/: dynamicsModel.m
nmpc_controller/src/: nmpc_controller.cpp  quad_nlp.cpp  quad_nlp_utils.cpp
offline_global_body_planner/: CMakeLists.txt  README.md  offline_global_body_planner.yaml  package.xml
offline_global_body_planner/include/offline_global_body_planner/: offline_global_body_plan.h  offline_global_body_planner.h  offline_global_body_planner_2.h  offline_planning_utils.h
offline_global_body_planner/scripts/: README.md  load2DPlanToCSV.m
offline_global_body_planner/src/: offline_global_body_plan.cpp  offline_global_body_planner.cpp  offline_global_body_planner_2.cpp  offline_global_body_planner_node.cpp  offline_planning_utils.cpp
offline_global_body_planner/test/: test_offline_global_body_planner.cpp
quad_simulator/: setup_deps.sh
quad_simulator/a1_description/xacro/: leg.xacro
quad_simulator/gazebo_scripts/config/: spirit_control_tail_dira.yaml  spirit_control_tail_dira_10.yaml  spirit_control_tail_dira_2.yaml  spirit_control_tail_dira_3.yaml  spirit_control_tail_dira_4.yaml  spirit_control_tail_dira_5.yaml  spirit_control_tail_dira_6.yaml
quad_simulator/gazebo_scripts/include/: controller_plugin.h  estimator_plugin.h
quad_simulator/gazebo_scripts/src/: controller_plugin.cpp  estimator_plugin.cpp
quad_simulator/go1_description/: CMakeLists.txt  package.xml  unitree-quad-sdk-joint-mappings.txt
quad_simulator/go1_description/launch/: check_joint.rviz  frames.gv  go1_rviz.launch
quad_simulator/go1_description/sdf_mesh/: go1.sdf  model.config  originalGo1.sdf  originalGo1.urdf
quad_simulator/go1_description/urdf/: go1.urdf
quad_simulator/go1_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  originalGo1.urdf  robot.xacro  transmission.xacro
quad_simulator/pupperv2_lite_description/: CMakeLists.txt  README.md  package.xml
quad_simulator/pupperv2_lite_description/debug/: frames.gv
quad_simulator/pupperv2_lite_description/launch/: display.launch  gazebo.launch  urdf.rviz
quad_simulator/pupperv2_lite_description/meshes/: FL_hip.STL  FL_lower_leg.STL  FL_toe.STL  FR_hip.STL  FR_toe.STL  RL_hip.STL  RL_lower_leg.STL  RL_toe.STL  RR_hip.STL  RR_lower_leg.STL  RR_toe.STL
quad_simulator/pupperv2_lite_description/obj_meshes/: Cube003.mtl  (+6 more)
quad_simulator/spirit_description/: frames.gv  rosgraph_spirit.dot
quad_utils/config/: a1.yaml  go1.yaml  plotjuggler_config.xml  plotjuggler_config_euler.xml  spirit.yaml
quad_utils/launch/: load_global_params.launch  load_params.launch  load_robot_params.launch  planning.launch  quad_gazebo.launch  quad_gazebo_dira.launch  quad_spawn.launch  remote_driver.launch  visualization.launch
quad_utils/scripts/: README.md  run_batch_simulation.py  run_batch_simulation_dira.py  run_batch_simulation_single.py
quad_utils/src/: fast_terrain_map.cpp  math_utils.cpp  quad_kd.cpp  ros_utils.cpp
robot_driver/: CMakeLists.txt  package.xml
robot_driver/src/: robot_driver.cpp  robot_driver_utils.cpp
tail_controller/: tail_controller.yaml
tail_controller/src/: tail_controller.cpp  tail_planner.cpp  tail_planner_node.cpp
(+55 files in other folders)
